# Computer-Vision-Labs---Lab6

./: CMakeLists.txt  sift.cpp  task1.cpp
